[tool.poetry]
name = "atdp"
version = "0.2.0"
description = "WithPPODependencies"
authors = ["cmc228"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"  
stable-baselines3 = "^2.6.0"
tensorflow = "^2.19.0"
torch = "^2.6.0"
pandas = "^2.2.3"
numpy = "^1.26.4"
matplotlib = "^3.10.1"
gym = "^0.26.2"
mujoco = "^3.3.0"
ray = "^2.44.0"
keras = "^3.9.0"
tensorflow-io-gcs-filesystem = "^0.31.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
