[project]
name = "atd-walker-package"
version = "0.0.0"
description = "first"
authors = [{ name = "cmc228", email = "cmc228@bath.ac.uk" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "gymnasium[mujoco] (>=1.1.1,<2.0.0)",
    "mujoco (>=3.3.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
